--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -79,7 +79,6 @@
 		transition: margin-left 0.5s;
 		padding: 16px;
 		margin-left: 0;
-		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
 		grid-template-rows: 1fr 1fr 1fr;
 	}
