--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 33em){
+@media only screen and (min-width: 35em){
 
 	:is(header) > #banner {
 		display: block;
@@ -50,6 +50,7 @@
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 		grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+
 	}
 	
 	#hero {
